notes/sample/CParser.py
# $ANTLR 3.0.1 C.g 2009-04-20 18:27:33

from antlr3 import *
from antlr3.compat import set, frozenset


# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
LINE_COMMENT=21
FloatTypeSuffix=16
IntegerTypeSuffix=14
LETTER=11
OCTAL_LITERAL=6
CHARACTER_LITERAL=8
Exponent=15
EOF=-1
HexDigit=13
STRING_LITERAL=9
WS=19
FLOATING_POINT_LITERAL=10
IDENTIFIER=4
UnicodeEscape=18
LINE_COMMAND=22
HEX_LITERAL=5
COMMENT=20
DECIMAL_LITERAL=7
EscapeSequence=12
OctalEscape=17

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "IDENTIFIER", "HEX_LITERAL", "OCTAL_LITERAL", "DECIMAL_LITERAL", "CHARACTER_LITERAL", 
    "STRING_LITERAL", "FLOATING_POINT_LITERAL", "LETTER", "EscapeSequence", 
    "HexDigit", "IntegerTypeSuffix", "Exponent", "FloatTypeSuffix", "OctalEscape", 
    "UnicodeEscape", "WS", "COMMENT", "LINE_COMMENT", "LINE_COMMAND", "'typedef'", 
    "';'", "','", "'='", "'extern'", "'static'", "'auto'", "'register'", 
    "'void'", "'char'", "'short'", "'int'", "'long'", "'float'", "'double'", 
    "'signed'", "'unsigned'", "'{'", "'}'", "'struct'", "'union'", "':'", 
    "'enum'", "'const'", "'__const'", "'inline'", "'volatile'", "'('", "')'", 
    "'['", "']'", "'__attribute__'", "'*'", "'...'", "'+'", "'-'", "'/'", 
    "'%'", "'++'", "'--'", "'sizeof'", "'.'", "'->'", "'&'", "'~'", "'!'", 
    "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", 
    "'|='", "'?'", "'||'", "'&&'", "'|'", "'^'", "'=='", "'!='", "'<'", 
    "'>'", "'<='", "'>='", "'<<'", "'>>'", "'case'", "'default'", "'if'", 
    "'else'", "'switch'", "'while'", "'do'", "'for'", "'goto'", "'continue'", 
    "'break'", "'return'"
]

class symbols_scope(object):
    def __init__(self):
        self.types = None


class declaration_scope(object):
    def __init__(self):
        self.isTypedef = None


class CParser(Parser):
    grammarFileName = "C.g"
    tokenNames = tokenNames

    def __init__(self, input):
        Parser.__init__(self, input)
        self.ruleMemo = {}

        self.symbols_stack = []

	self.declaration_stack = []



                


              
    def isTypeName(self, name):
      for scope in self.symbols_stack:
    	if name in scope.types: 
    	  return True;
      return False;



    # $ANTLR start translation_unit
    # C.g:53:1: translation_unit : ( external_declaration )+ ;
    def translation_unit(self, ):
        self.symbols_stack.append(symbols_scope())

        translation_unit_StartIndex = self.input.index()
               
        self.symbols_stack[-1].types = set()

        try:
            try:
                if self.backtracking > 0 and self.alreadyParsedRule(self.input, 1):
                    return 

                # C.g:58:2: ( ( external_declaration )+ )
                # C.g:58:4: ( external_declaration )+
                # C.g:58:4: ( external_declaration )+
                cnt1 = 0
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if (LA1_0 == IDENTIFIER or LA1_0 == 23 or (27 <= LA1_0 <= 39) or (42 <= LA1_0 <= 43) or (45 <= LA1_0 <= 50) or (54 <= LA1_0 <= 55)) :
                        alt1 = 1


                    if alt1 == 1:
                        # C.g:0:0: external_declaration
                        self.following.append(self.FOLLOW_external_declaration_in_translation_unit76)
                        self.external_declaration()
                        self.following.pop()
                        if self.failed:
                            return 


                    else:
                        if cnt1 >= 1:
                            break #loop1

                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        eee = EarlyExitException(1, self.input)
                        raise eee

                    cnt1 += 1






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:
            if self.backtracking > 0:
                self.memoize(self.input, 1, translation_unit_StartIndex)

            self.symbols_stack.pop()

            pass

        return 

    # $ANTLR end translation_unit


    # $ANTLR start external_declaration
    # C.g:61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );
    def external_declaration(self, ):

        external_declaration_StartIndex = self.input.index()
        try:
            try:
                if self.backtracking > 0 and self.alreadyParsedRule(self.input, 2):
                    return 

                # C.g:77:2: ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration )
                alt2 = 2
                LA2_0 = self.input.LA(1)

                if (LA2_0 == 54) :
                    LA2_1 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 1, self.input)

                        raise nvae

                elif ((27 <= LA2_0 <= 30)) :
                    LA2_2 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 2, self.input)

                        raise nvae

                elif (LA2_0 == 31) :
                    LA2_3 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 3, self.input)

                        raise nvae

                elif (LA2_0 == 32) :
                    LA2_4 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 4, self.input)

                        raise nvae

                elif (LA2_0 == 33) :
                    LA2_5 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 5, self.input)

                        raise nvae

                elif (LA2_0 == 34) :
                    LA2_6 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 6, self.input)

                        raise nvae

                elif (LA2_0 == 35) :
                    LA2_7 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 7, self.input)

                        raise nvae

                elif (LA2_0 == 36) :
                    LA2_8 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 8, self.input)

                        raise nvae

                elif (LA2_0 == 37) :
                    LA2_9 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 9, self.input)

                        raise nvae

                elif (LA2_0 == 38) :
                    LA2_10 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 10, self.input)

                        raise nvae

                elif (LA2_0 == 39) :
                    LA2_11 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 11, self.input)

                        raise nvae

                elif ((42 <= LA2_0 <= 43)) :
                    LA2_12 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 12, self.input)

                        raise nvae

                elif (LA2_0 == 45) :
                    LA2_13 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 13, self.input)

                        raise nvae

                elif (LA2_0 == IDENTIFIER) :
                    LA2_14 = self.input.LA(2)

                    if (((self.synpred4() and self.isTypeName(self.input.LT(1).getText()) ) or self.synpred4())) :
                        alt2 = 1
                    elif (self.isTypeName(self.input.LT(1).getText()) ) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 14, self.input)

                        raise nvae

                elif ((46 <= LA2_0 <= 49)) :
                    LA2_15 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt2 = 1
                    elif (True) :
                        alt2 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 15, self.input)

                        raise nvae

                elif (LA2_0 == 55) and (self.synpred4()):
                    alt2 = 1
                elif (LA2_0 == 50) and (self.synpred4()):
                    alt2 = 1
                elif (LA2_0 == 23) :
                    alt2 = 2
                else:
                    if self.backtracking > 0:
                        self.failed = True
                        return 

                    nvae = NoViableAltException("61:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );", 2, 0, self.input)

                    raise nvae

                if alt2 == 1:
                    # C.g:77:4: ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition
                    self.following.append(self.FOLLOW_function_definition_in_external_declaration112)
                    self.function_definition()
                    self.following.pop()
                    if self.failed:
                        return 


                elif alt2 == 2:
                    # C.g:78:4: declaration
                    self.following.append(self.FOLLOW_declaration_in_external_declaration117)
                    self.declaration()
                    self.following.pop()
                    if self.failed:
                        return 



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:
            if self.backtracking > 0:
                self.memoize(self.input, 2, external_declaration_StartIndex)

            pass

        return 

    # $ANTLR end external_declaration


    # $ANTLR start function_definition
    # C.g:81:1: function_definition : ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement ) ;
    def function_definition(self, ):
        self.symbols_stack.append(symbols_scope())

        function_definition_StartIndex = self.input.index()
               
        self.symbols_stack[-1].types = set()

        try:
            try:
                if self.backtracking > 0 and self.alreadyParsedRule(self.input, 3):
                    return 

                # C.g:86:2: ( ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement ) )
                # C.g:86:4: ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement )
                # C.g:86:4: ( declaration_specifiers )?
                alt3 = 2
                LA3 = self.input.LA(1)
                if LA3 == 54:
                    LA3_1 = self.input.LA(2)

                    if (LA3_1 == 50) :
                        LA3_18 = self.input.LA(3)

                        if (self.synpred5()) :
                            alt3 = 1
                elif LA3 == 27 or LA3 == 28 or LA3 == 29 or LA3 == 30 or LA3 == 31 or LA3 == 32 or LA3 == 33 or LA3 == 34 or LA3 == 35 or LA3 == 36 or LA3 == 37 or LA3 == 38 or LA3 == 39 or LA3 == 42 or LA3 == 43 or LA3 == 45 or LA3 == 46 or LA3 == 47 or LA3 == 48 or LA3 == 49:
                    alt3 = 1
                elif LA3 == IDENTIFIER:
                    LA3 = self.input.LA(2)
                    if LA3 == 54:
                        LA3_19 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 55:
                        alt3 = 1
                    elif LA3 == IDENTIFIER:
                        LA3_21 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 50:
                        LA3_22 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 27 or LA3 == 28 or LA3 == 29 or LA3 == 30:
                        LA3_23 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 31:
                        LA3_24 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 32:
                        LA3_25 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 33:
                        LA3_26 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 34:
                        LA3_27 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 35:
                        LA3_28 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 36:
                        LA3_29 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 37:
                        LA3_30 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 38:
                        LA3_31 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 39:
                        LA3_32 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 42 or LA3 == 43:
                        LA3_33 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 45:
                        LA3_34 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                    elif LA3 == 46 or LA3 == 47 or LA3 == 48 or LA3 == 49:
                        LA3_35 = self.input.LA(3)

                        if ((self.synpred5() and self.isTypeName(self.input.LT(1).getText()) )) :
                            alt3 = 1
                if alt3 == 1:
                    # C.g:0:0: declaration_specifiers
                    self.following.append(self.FOLLOW_declaration_specifiers_in_function_definition139)
                    self.declaration_specifiers()
                    self.following.pop()
                    if self.failed:
                        return 



                self.following.append(self.FOLLOW_declarator_in_function_definition142)
                self.declarator()
                self.following.pop()
                if self.failed:
                    return 
                # C.g:87:3: ( ( declaration )+ compound_statement | compound_statement )
                alt5 = 2
                LA5_0 = self.input.LA(1)

                if (LA5_0 == IDENTIFIER or LA5_0 == 23 or (27 <= LA5_0 <= 39) or (42 <= LA5_0 <= 43) or (45 <= LA5_0 <= 49) or LA5_0 == 54) :
                    alt5 = 1
                elif (LA5_0 == 40) :
                    alt5 = 2
                else:
                    if self.backtracking > 0:
                        self.failed = True
                        return 

                    nvae = NoViableAltException("87:3: ( ( declaration )+ compound_statement | compound_statement )", 5, 0, self.input)

                    raise nvae

                if alt5 == 1:
                    # C.g:87:5: ( declaration )+ compound_statement
                    # C.g:87:5: ( declaration )+
                    cnt4 = 0
                    while True: #loop4
                        alt4 = 2
                        LA4_0 = self.input.LA(1)

                        if (LA4_0 == IDENTIFIER or LA4_0 == 23 or (27 <= LA4_0 <= 39) or (42 <= LA4_0 <= 43) or (45 <= LA4_0 <= 49) or LA4_0 == 54) :
                            alt4 = 1


                        if alt4 == 1:
                            # C.g:0:0: declaration
                            self.following.append(self.FOLLOW_declaration_in_function_definition148)
                            self.declaration()
                            self.following.pop()
                            if self.failed:
                                return 


                        else:
                            if cnt4 >= 1:
                                break #loop4

                            if self.backtracking > 0:
                                self.failed = True
                                return 

                            eee = EarlyExitException(4, self.input)
                            raise eee

                        cnt4 += 1


                    self.following.append(self.FOLLOW_compound_statement_in_function_definition151)
                    self.compound_statement()
                    self.following.pop()
                    if self.failed:
                        return 


                elif alt5 == 2:
                    # C.g:88:5: compound_statement
                    self.following.append(self.FOLLOW_compound_statement_in_function_definition158)
                    self.compound_statement()
                    self.following.pop()
                    if self.failed:
                        return 







            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:
            if self.backtracking > 0:
                self.memoize(self.input, 3, function_definition_StartIndex)

            self.symbols_stack.pop()

            pass

        return 

    # $ANTLR end function_definition


    # $ANTLR start declaration
    # C.g:92:1: declaration : ( 'typedef' ( declaration_specifiers )? init_declarator_list ( attribute_specifier )* ';' | declaration_specifiers ( init_declarator_list )? ( attribute_specifier )* ';' );
    def declaration(self, ):
        self.declaration_stack.append(declaration_scope())
        declaration_StartIndex = self.input.index()
               
        self.declaration_stack[-1].isTypedef =  False

        try:
            try:
                if self.backtracking > 0 and self.alreadyParsedRule(self.input, 4):
                    return 

                # C.g:99:2: ( 'typedef' ( declaration_specifiers )? init_declarator_list ( attribute_specifier )* ';' | declaration_specifiers ( init_declarator_list )? ( attribute_specifier )* ';' )
                alt10 = 2
                LA10_0 = self.input.LA(1)
